Fix serialization of selectors when namespaces are around to be smarter; fix serialization of pseudo-elements to prepend '*' as needed.  Bug 173586, r=glazou, sr=roc